rev 45 (2015-08-10)
- added the ability to express a target in absolute Mt terms
- added the ability to specify the breakdown of a target for the three sectors
- added new fields to display table
- pledge entry user can now get a data table with historical and BAU emissions data for an arbitrary country from the core db (datatable.php)
- expose "public" flag to entry GUI, defaulting to public
- removed unused entry.php file (according to changelog notes (rev 29) this was a new form that EKB was working on but didn't get very far)
- updated caveat_help.php to reflect entry of JSON data via GUI
- added CHANGELOG file

rev 44 (2015-08-06)
- pledge table header now floats on top of the window rather than scrolling out of view.

rev 43 (2015-08-06)
- additional JSON array data for caveat field is now entered through the GUI - new caveat fields are added through the "caveat_fields.php" config file
- Afghanistan is no longer pre-selected as country for the entry mask (which had resulted in many accidental fake entries for AFG)
- added jQuery extension for floating table head for pledge table (but didn't get it to work yet)
- pledge data export (display.php) now supports direct download as Excel (tab-seperated) file via ?dl=1 URL parameter

rev 42 (2015-07-12)
- more caveat help
- display.php now reads config file to connect to database

rev 41 (2015-07-02)
- additional caveat field use

rev 40 (2015-06-17)
- made the script actually use the config.php configurations when connecting to the pledge database

rev 39 (2015-06-17)
- getting rid of (last?) hardcoded gdrights.org links and "GDRs" branding

rev 38 (2015-06-17)
- preparing for calculator move

rev 37 (2015-06-08)
- updated helptext for caveat field.

rev 36 (2015-05-08)
- slight caveat help text improvements

rev 35 (2015-05-08)
- moved help text for special uses of caveat field into separate help file
- disabled Rich Text Editor for caveat field (was messing up with special uses, breaking markup and such)
